# cargo-workspace

./: .editorconfig  .gitignore  CHANGELOG.txt  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: linux.yml  windows.yml
src/: constants.rs  fs.rs  git.rs  main.rs  menu.rs  path.rs  utils.rs
src/tests/: fs.rs  menu.rs  mod.rs  path.rs
